Correct the oauth flow

--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,8 @@
     ],
     "require": {
         "slim/slim": "^3.0",
-        "adam-paterson/oauth2-slack": "^1.1",
-        "coderstephen/slack-client": "^0.2.3",
-        "slim/twig-view": "^2.1"
+        "slim/twig-view": "^2.1",
+        "league/oauth2-client": "^1.4"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
