--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     "require": {
         "slim/slim": "^3.0",
         "slim/twig-view": "^2.1",
-        "league/oauth2-client": "^1.4"
+        "league/oauth2-client": "^1.4",
+        "guzzlehttp/guzzle": "~6.0"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
