--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "slim/slim": "^3.0",
         "slim/twig-view": "^2.1",
         "league/oauth2-client": "^1.4",
-        "guzzlehttp/guzzle": "~6.0"
+        "guzzlehttp/guzzle": "~6.0",
+        "predis/predis": "^1.0"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
