--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "mocha": "^3.0.2"
   },
   "dependencies": {
+    "inversify": "^2.0.0-rc.1",
+    "reflect-metadata": "^0.1.8",
     "web-request": "^1.0.3"
   }
 }
