--- a/package.json
+++ b/package.json
@@ -20,6 +20,6 @@
   "dependencies": {
     "inversify": "^2.0.0-rc.1",
     "reflect-metadata": "^0.1.8",
-    "web-request": "^1.0.3"
+    "request": "^2.74.0"
   }
 }
